Working on spacing issues

--- a/06/global.css
+++ b/06/global.css
@@ -66,4 +66,5 @@ a {
   text-decoration: none;
   text-transform: uppercase;
   font-size: 16px;
+  color: white;
 }
