--- a/07/global.css
+++ b/07/global.css
@@ -42,7 +42,7 @@ h1 {
   color: yellow;
   font-size: 15px;
   border-bottom: 1px solid yellow;
-  padding-bottom: 227px;
+  padding-bottom: 27px;
   padding-top: 20px;
 }
 
